# skminer

./: .gitignore  Activity1.nvact  Makefile.am  Makefile.in  README.md  aclocal.m4  ccminer.vcxproj  ccminer.vcxproj.filters  ccminer.vcxproj_old  configure  configure.ac  core.cpp  core.h  cpu-miner.c  cpu-miner.cpp  cpuminer-config.h  cuda_helper.h  miner.c  miner.h  miner2.h  sk-miner.cpp  test.cpp  test_750ti.bat  truc.txt  util.c
Algo/: cuda_skein1024.cu  sk1024.cu  sk1024_keccak.cu
compat/: Makefile.in
compat/jansson/: Makefile.in
compat/libcurl/: curl.h
compat/libcurl/lib/: libcurl.lib  libcurl_a.lib
hash/: DDOS_Score.cpp  DDOS_Score.h  Keccak-compact64.cpp  KeccakHash.cpp  Miner.cpp  Miner.h  MinerThread.cpp  MinerThread.h
heavy/: heavy.cu
